--- a/index.html
+++ b/index.html
@@ -1,84 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jeffrey Campbell | Strategic Partnerships Leader</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header class="hero">
-    <img src="images/jeff-photo.jpg" alt="Jeffrey Campbell" class="profile-pic" />
-    <h1>Jeffrey Campbell</h1>
-    <p class="subtitle">Strategic Partnerships Leader | GTM Architect | Team Builder</p>
-    <a href="#contact" class="cta-button">Let’s Work Together</a>
-  </header>
-
-  <section class="chapter dark">
-    <h2>The Spark</h2>
-    <p>AmeriCommerce had no sales team, no systems, and an underused partner network. I was the only one in sales. I listened to what customers were asking for — better integrations, smoother handoffs, and real tech relationships. That’s when I realized: partnerships weren’t just helpful — they were *strategic*.</p>
-  </section>
-
-  <section class="chapter">
-    <h2>The Climb</h2>
-    <p>I built out a custom Salesforce system with full automation. I drove direct sales. I landed a partnership that brought over 9,000 stores to the platform. When the acquisition came, I celebrated with the team over Zoom. It felt like validation — we took something no one wanted and made it best-in-class.</p>
-  </section>
-
-  <section class="chapter dark">
-    <h2>The Builder</h2>
-    <p>At Cart.com, there was no partnerships team. So I built one. I worked across departments — legal, marketing, sales — to build the systems, structure, and strategy. We signed PayPal, Coinbase, Klaviyo, Avalara, and more. I exceeded quota by 240%. I helped shape how Cart.com goes to market.</p>
-  </section>
-
-  <section class="chapter">
-    <h2>The Operator</h2>
-    <p>My strength is in building things that scale — partner programs, sales systems, and revenue operations. I bring structure to the chaos, empathy to the process, and energy to the team. I don’t just close deals — I build engines.</p>
-  </section>
-
-  <section class="testimonials">
-    <h2>What Others Say</h2>
-
-    <div class="quote">
-      <p>“Jeff helped us build and sell AmeriCommerce and launch Cart.com. He’s strategic, technical, and deeply trustworthy. We wouldn’t be where we are without him.”</p>
-      <span>— Ed Sturrock, CEO of AmeriCommerce</span>
-    </div>
-
-    <div class="quote">
-      <p>“He bridges commercial value with technical integration. Jeff sees the whole board.”</p>
-      <span>— Laura Colagrande, Enterprise Partnerships at Bloomreach</span>
-    </div>
-
-    <div class="quote">
-      <p>“Jeff is a true operator. I watched him deliver, repeatedly, with integrity and empathy.”</p>
-      <span>— Scott Staupe, VP Alliances, RELEX</span>
-    </div>
-
-    <div class="quote">
-      <p>“A strategic leader who knows eCommerce inside out — Jeff is the kind of person that makes everyone better.”</p>
-      <span>— Jordan Donahue, Adobe</span>
-    </div>
-  </section>
-
-  <section class="values">
-    <h2>What I Believe</h2>
-    <ul>
-      <li><strong>Honesty:</strong> Tell the truth, even when it’s tough.</li>
-      <li><strong>Integrity:</strong> Do the right thing, especially when no one’s watching.</li>
-      <li><strong>Having Fun:</strong> Work should be fulfilling — and a little bit fun.</li>
-    </ul>
-  </section>
-
-  <section class="contact" id="contact">
-    <h2>Let’s Work Together</h2>
-    <form action="https://formspree.io/f/your-form-id" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
-
-  <footer>
-    <p>© 2025 Jeffrey Campbell | Built for what’s next</p>
-  </footer>
-</body>
-</html>
+<!-- Placeholder for index.html -->
