--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jeffrey Campbell | Strategic Partnerships Leader</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 <body>
   <header class="hero" data-aos="fade-up">
@@ -16,53 +17,53 @@
     <a href="jeff-campbell-resume.pdf" class="cta-button" download>Download Resume</a>
   </header>
 
-  <section class="companies" data-aos="fade-up">
-    <h2>Previously With</h2>
-    <div class="logo-grid">
-      <img src="images/americommerce.png" alt="AmeriCommerce" />
-      <img src="images/capitalone.png" alt="Capital One" />
-      <img src="images/cartcom.png" alt="Cart.com" />
-    </div>
-  </section>
-
   <section class="chapter" data-aos="fade-up">
     <h2>The Spark</h2>
-    <p>I was hired at Capital One and placed on the AmeriCommerce team during its ownership phase. When Capital One decided to divest AmeriCommerce, everything changed. We were suddenly a standalone company again — leaner, untested, and full of potential. I became the only person in sales. No CRM. No pipeline. No fallback. Just a belief in our product and a drive to build. I listened to customers, leaned into integration gaps, and realized that the fastest way to scale wasn't just selling — it was unlocking partnerships.</p>
-    <div class="quote">“Jeff is a powerhouse in connecting with people, building trust, and translating technical strategy into scalable impact.”<br><span>— Lance LaRue, Director, Capital One</span></div>
+    <p>I was hired at Capital One and placed on the AmeriCommerce team during its ownership phase. When Capital One decided to divest AmeriCommerce, everything changed. We became a standalone company — leaner, untested, and full of potential. I became the only person in sales. No CRM. No pipeline. No fallback. Just belief in our product and a drive to build. I listened to customers, leaned into integration gaps, and discovered that scaling meant more than selling — it meant building partnerships.</p>
   </section>
 
   <section class="chapter dark" data-aos="fade-up">
     <h2>Revenue Through Relationships</h2>
-    <p>At AmeriCommerce, I built a Salesforce instance from scratch, closed a deal that brought over 9,000 stores, and led the initiative to make PayPal our preferred payment partner — significantly increasing revenue through payments and monetized integrations.</p>
-    <div class="quote">“Jeff helped us build and sell AmeriCommerce and launch Cart.com. Strategic, technical, and deeply trustworthy.”<br><span>— Ed Sturrock, CEO, AmeriCommerce</span></div>
+    <p>At AmeriCommerce, I built a Salesforce instance from scratch, closed a partner deal that brought over 9,000 stores, and led the initiative to make PayPal our preferred payment partner — significantly increasing revenue through payments and monetized integrations.</p>
   </section>
 
   <section class="chapter" data-aos="fade-up">
     <h2>Scaling with a Team at Cart.com</h2>
-    <p>At Cart.com, I helped build the partnerships function with an amazing team. We signed PayPal, Coinbase, Klaviyo, Attentive, and Avalara. We built GTM plays, onboarding, and sales enablement to drive measurable impact — I exceeded quota by 240%.</p>
-    <div class="quote">“Jeff is a fantastic partner. He has the technical chops and empathy to make things happen across organizations.”<br><span>— Ian Leslie, CMO, Pipe17</span></div>
-    <div class="quote">“Jeff is a true operator. He delivers with integrity and empathy. It’s rare to find both.”<br><span>— Scott Staupe, VP Alliances</span></div>
-  </section>
-
-  <section class="logos" data-aos="fade-up">
-    <h2>Trusted by Leading Brands</h2>
-    <div class="logo-grid">
-      <img src="images/paypal.png" alt="PayPal" />
-      <img src="images/klaviyo.png" alt="Klaviyo" />
-      <img src="images/coinbase.png" alt="Coinbase" />
-      <img src="images/avalara.png" alt="Avalara" />
-      <img src="images/attentive.png" alt="Attentive" />
-      <img src="images/adobe.png" alt="Adobe" />
-      <img src="images/bloomreach.png" alt="Bloomreach" />
-      <img src="images/pipe17.png" alt="Pipe17" />
-    </div>
+    <p>At Cart.com, I helped build the partnerships function with an amazing team. We signed PayPal, Coinbase, Klaviyo, Attentive, and Avalara. We built GTM plays, onboarding flows, and sales enablement that drove real revenue — and I exceeded quota by 240%.</p>
   </section>
 
   <section class="chapter dark" data-aos="fade-up">
     <h2>Owning Sales & Partnerships</h2>
-    <p>By the end of my time at Cart.com, I was running all Sales and Partnerships for the eCommerce division — leading outbound strategy, AE management, referral pipelines, partner deals, and strategic alignment across departments.</p>
-    <div class="quote">“Jeff has this ability to rally the right people to the right priorities. He’s part leader, part integrator.”<br><span>— Jack Cravy, COO, Cart.com</span></div>
-    <div class="quote">“Jeff was a steady hand through a time of growth, transition, and change. He was never just doing a job — he was helping us define it.”<br><span>— Laura Colagrande, Bloomreach</span></div>
+    <p>By the end of my time at Cart.com, I was leading all Sales and Partnerships for the eCommerce division — managing outbound strategy, AE performance, referral pipelines, partner deals, and aligning teams across the company.</p>
+  </section>
+
+  <section class="testimonials" data-aos="fade-up">
+    <h2>What Others Say</h2>
+
+    <div class="quote">
+      <p>“Jeff was instrumental to kicking off our sales and partner teams across companies helping us to eventually sell to Capital One and helped us kick off Cart.com… Jeff has a knack for developing and executing partnership and sales strategies that are both innovative and effective. His contributions, leadership, and character make him an invaluable asset to any team.”</p>
+      <span>— Ed Sturrock, CEO, AmeriCommerce / CTO, Cart.com</span>
+    </div>
+
+    <div class="quote">
+      <p>“Jeff has a commitment to deliver results with the partners and customers he works with — and also does so with a high-level of integrity and empathy.”</p>
+      <span>— Scott Staupe, VP of Alliances, RELEX Solutions</span>
+    </div>
+
+    <div class="quote">
+      <p>“Jeff possesses a deep understanding of commerce platforms, integrations, and the ability to translate that into compelling solutions for partners. He’s a strong team player who thrives in collaborative environments.”</p>
+      <span>— Jordan Donahue, Field Partner Sales Manager, Adobe</span>
+    </div>
+
+    <div class="quote">
+      <p>“Jeff led the integration and go-to-market work with Attentive and helped scale our PayPal partnership — both were complex and high-visibility. He bridges the gap between commercial strategy and technical execution.”</p>
+      <span>— Laura Colagrande, Enterprise Partnerships, Bloomreach</span>
+    </div>
+
+    <div class="quote">
+      <p>“Jeff has strong technical acumen and deep knowledge of eCommerce. He’s always willing to support peers, solve complex problems, and build connections that help customers win.”</p>
+      <span>— Ian Leslie, Senior Director, Pipe17</span>
+    </div>
   </section>
 
   <section class="values" data-aos="fade-up">
