--- a/index.html
+++ b/index.html
@@ -22,20 +22,35 @@
     <p>I was hired at Capital One and placed on the AmeriCommerce team during its ownership phase. When Capital One decided to divest AmeriCommerce, everything changed. We became a standalone company — leaner, untested, and full of potential. I became the only person in sales. No CRM. No pipeline. No fallback. Just belief in our product and a drive to build. I listened to customers, leaned into integration gaps, and discovered that scaling meant more than selling — it meant building partnerships.</p>
   </section>
 
-  <section class="chapter dark" data-aos="fade-up">
-    <h2>Revenue Through Relationships</h2>
-    <p>At AmeriCommerce, I built a Salesforce instance from scratch, closed a partner deal that brought over 9,000 stores, and led the initiative to make PayPal our preferred payment partner — significantly increasing revenue through payments and monetized integrations.</p>
-  </section>
+ <section class="chapter dark" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
+  <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">Revenue Through Relationships</h2>
+  <p>As Sales & Partnerships Manager at AmeriCommerce, I owned the entire go-to-market motion — leading inbound and outbound sales while simultaneously building a partner ecosystem that reinforced our revenue strategy.</p>
+  <p>I rebuilt our Salesforce instance from the ground up — introducing lead routing, pipeline visibility, and automated workflows that supported faster response times and higher conversion rates.</p>
+  <p>At the same time, I developed partnerships with companies like <strong>PayPal, Affirm, ShipStation, and TaxCloud</strong> — strengthening integrations, co-marketing, and monetized relationships. These partners not only increased product value — they also became a growing source of referral business.</p>
+  <p>This dual engine of <strong>sales and partnerships</strong> helped us grow a niche platform into a highly competitive offering — and contributed directly to year-over-year revenue gains.</p>
+</section>
 
-  <section class="chapter" data-aos="fade-up">
-    <h2>Scaling with a Team at Cart.com</h2>
-    <p>At Cart.com, I helped build the partnerships function with an amazing team. We signed PayPal, Coinbase, Klaviyo, Attentive, and Avalara. We built GTM plays, onboarding flows, and sales enablement that drove real revenue — and I exceeded quota by 240%.</p>
-  </section>
+ <section class="chapter" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
+  <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">Scaling at Cart.com</h2>
+  <p>When AmeriCommerce was acquired by Cart.com, I joined as one of its earliest team members — stepping in as <strong>Sales Manager for the Storefront division</strong> while the company was still under 50 employees.</p>
+  <p>Between 2021 and 2024, I was promoted twice — first to <strong>Senior Partner Manager</strong>, then to <strong>Director of Strategic Partnerships & Business Development</strong> — as Cart.com scaled to over 1,000 employees and raised significant funding.</p>
+  <p>I helped build the partnerships function from scratch, collaborating with legal, sales, and marketing to create frameworks that were repeatable and revenue-focused. We signed and scaled partner relationships with <strong>PayPal, Klaviyo, Coinbase, Attentive, and Avalara</strong> — building co-sell, co-market, and enablement plays that helped fuel our rapid customer acquisition. These partnerships became a meaningful driver of our pipeline and brand credibility as we grew.</p>
+  <p>I was also one of the go-to leaders for onboarding and cross-team collaboration — helping train new hires, support exec alignment, and champion our core values as a founding member of the <strong>Culture Committee</strong>.</p>
+  <p>By the end of my time, I was leading all partnerships and sales efforts for the eCommerce division — trusted not just to close deals, but to build the strategy around them.</p>
+</section>
 
-  <section class="chapter dark" data-aos="fade-up">
-    <h2>Owning Sales & Partnerships</h2>
-    <p>By the end of my time at Cart.com, I was leading all Sales and Partnerships for the eCommerce division — managing outbound strategy, AE performance, referral pipelines, partner deals, and aligning teams across the company.</p>
-  </section>
+  <section class="contact" id="contact" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
+  <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">Let’s Talk About Building Together</h2>
+  <p>I’m currently exploring my next role — whether that’s with a team scaling fast or an established organization looking to evolve its go-to-market strategy. If you’re looking for someone who’s built sales and partnership systems from scratch, led through growth and transition, and believes that execution and culture go hand in hand — let’s connect.</p>
+  <p>Use the form below or email me directly. Let’s start a conversation.</p>
+  <form action="https://formspree.io/f/your-form-id" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required style="padding: 0.75rem; font-size: 1rem; width: 100%;" />
+    <input type="email" name="email" placeholder="Your Email" required style="padding: 0.75rem; font-size: 1rem; width: 100%;" />
+    <textarea name="message" placeholder="Your Message" required style="padding: 0.75rem; font-size: 1rem; width: 100%;"></textarea>
+    <button type="submit" style="background: red; color: white; padding: 0.75rem 1.5rem; font-weight: bold; font-size: 1.1rem; border: none; border-radius: 8px; cursor: pointer;">Send Message</button>
+  </form>
+</section>
+
 
   <section class="testimonials" data-aos="fade-up">
     <h2>What Others Say</h2>
