--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 
 <section class="chapter" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
   <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">The Spark</h2>
-  <p>In 2014 I was hired as a Senior Account Executive at Capital One, working on the AmeriCommerce platform during its ownership. For three years, we operated with the backing of a full sales team and the structure of a Fortune 100 company.</p>
-  <p>Then Capital One sold AmeriCommerce (luckily to the original owner).</p>
-  <p>Overnight, the sales org was gone. What remained was me — the last AE — and Jack Cravy, our VP of Operations. While Jack ran the business, I became the entire commercial function: inbound, outbound, partnerships, systems, and strategy.</p>
-  <p>There was no CRM, no pipeline, and no support team. So I built it. I rebuilt our Salesforce instance from scratch to automate workflows, assign leads, and create visibility across the team as we rebuilt.</p>
+  <p>I was a Senior Account Executive at Capital One, working on the AmeriCommerce platform during its ownership. For three years, we operated with the backing of a full sales team and the structure of a Fortune 100 company.</p>
+  <p>Then Capital One sold AmeriCommerce.</p>
+  <p>What remained was a lean but committed core: myself — the last AE — Ed Sturrock, our trusted CEO, Jack Cravy, our VP of Operations, a talented group of developers, and a small but mighty support team. We were scrappy, focused, and determined to rebuild.</p>
+  <p>There was no CRM. No sales pipeline. No playbook. So I built it. I rebuilt our Salesforce instance from scratch to automate workflows, assign leads, and create visibility across the team.</p>
   <p>At the same time, I wasn’t just selling — I was forging partnerships with companies like <strong>PayPal, Affirm, ShipStation, and TaxCloud</strong>. I worked directly with their teams to strengthen integrations, negotiate terms, and build co-marketing motions that actually drove revenue.</p>
   <p>That’s when I realized: the fastest way to grow wasn’t more calls or more emails — it was building the right relationships and systems to scale.</p>
 </section>
+
 
 
  <section class="chapter dark" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
