--- a/index.html
+++ b/index.html
@@ -59,34 +59,40 @@
 </section>
 
 
-  <section class="testimonials" data-aos="fade-up">
-    <h2>What Others Say</h2>
-
-    <div class="quote">
-      <p>“Jeff was instrumental to kicking off our sales and partner teams across companies helping us to eventually sell to Capital One and helped us kick off Cart.com… Jeff has a knack for developing and executing partnership and sales strategies that are both innovative and effective. His contributions, leadership, and character make him an invaluable asset to any team.”</p>
+<section class="testimonials" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
+  <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">What Others Say</h2>
+  <div class="testimonial-carousel">
+    <div class="testimonial active">
+      <p>“Jeff was instrumental in launching our sales and partner teams across multiple companies. His strategic thinking, problem-solving, and ability to build repeatable systems made him an invaluable asset to both AmeriCommerce and Cart.com.”</p>
       <span>— Ed Sturrock, CEO, AmeriCommerce / CTO, Cart.com</span>
     </div>
-
-    <div class="quote">
-      <p>“Jeff has a commitment to deliver results with the partners and customers he works with — and also does so with a high-level of integrity and empathy.”</p>
+    <div class="testimonial">
+      <p>“Jeff has a commitment to deliver results with both partners and customers — always with integrity and empathy. He’s technically sharp and genuinely great to work with.”</p>
       <span>— Scott Staupe, VP of Alliances, RELEX Solutions</span>
     </div>
-
-    <div class="quote">
-      <p>“Jeff possesses a deep understanding of commerce platforms, integrations, and the ability to translate that into compelling solutions for partners. He’s a strong team player who thrives in collaborative environments.”</p>
+    <div class="testimonial">
+      <p>“Jeff has deep expertise in commerce platforms and integrations. He’s a strong team player who knows how to translate technical knowledge into real partner solutions.”</p>
       <span>— Jordan Donahue, Field Partner Sales Manager, Adobe</span>
     </div>
-
-    <div class="quote">
-      <p>“Jeff led the integration and go-to-market work with Attentive and helped scale our PayPal partnership — both were complex and high-visibility. He bridges the gap between commercial strategy and technical execution.”</p>
+    <div class="testimonial">
+      <p>“Jeff helped scale our PayPal partnership and led the GTM work with Attentive — two highly complex, cross-functional initiatives. He bridges technical and commercial strategy like few others can.”</p>
       <span>— Laura Colagrande, Enterprise Partnerships, Bloomreach</span>
     </div>
-
-    <div class="quote">
-      <p>“Jeff has strong technical acumen and deep knowledge of eCommerce. He’s always willing to support peers, solve complex problems, and build connections that help customers win.”</p>
+    <div class="testimonial">
+      <p>“Jeff has strong technical acumen and deep eCommerce knowledge. He consistently went above and beyond — offering creative solutions and connecting people with the right partners.”</p>
       <span>— Ian Leslie, Senior Director, Pipe17</span>
     </div>
-  </section>
+    <div class="testimonial">
+      <p>“Jeff is an informed consultant more than a salesman — a rare talent who listens, guides, and delivers. His insights and customer-first mindset make him an asset to any team.”</p>
+      <span>— Lance LaRue, President, 5 Under Golf (formerly Capital One)</span>
+    </div>
+    <div class="testimonial">
+      <p>“Jeff is as hardworking as they come and extremely intelligent in his approach to both sales and partnerships. He dives into the details, communicates up effectively, and any company would be lucky to have him.”</p>
+      <span>— Jack Cravy, VP, Cart.com</span>
+    </div>
+  </div>
+</section>
+
 
   <section class="values" data-aos="fade-up">
     <h2>What I Believe</h2>
