--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <p class="subtitle">Strategic Partnerships Leader | GTM Architect | Former Head of Sales & Partnerships, Cart.com</p>
     <a href="#contact" class="cta-button">Let’s Build Something Together</a>
     <a href="jeff-campbell-resume.pdf" class="cta-button" download>Download Resume</a>
+    <p><a href="https://www.linkedin.com/in/jeffrey-campbell-/" target="_blank" style="color: red; font-weight: bold; text-decoration: none;">View my LinkedIn profile</a></p>
+
   </header>
 
 <section class="chapter" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
@@ -116,6 +118,8 @@
 
   <footer>
     <p>© 2025 Jeffrey Campbell | Let’s build something great</p>
+    <p><a href="https://www.linkedin.com/in/jeffrey-campbell-/" target="_blank" style="color: white; text-decoration: underline;">Connect with me on LinkedIn</a></p>
+
   </footer>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
