--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
   <p>That’s when I realized: the fastest way to grow wasn’t more calls or more emails — it was building the right relationships and systems to scale.</p>
 </section>
 
-
-
  <section class="chapter dark" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
   <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">Revenue Through Relationships</h2>
   <p>As Sales & Partnerships Manager at AmeriCommerce, I owned the entire go-to-market motion — leading inbound and outbound sales while simultaneously building a partner ecosystem that reinforced our revenue strategy.</p>
@@ -47,6 +45,7 @@
   <p>I was also one of the go-to leaders for onboarding and cross-team collaboration — helping train new hires, support exec alignment, and champion our core values as a founding member of the <strong>Culture Committee</strong>.</p>
   <p>By the end of my time, I was leading all partnerships and sales efforts for the eCommerce division — trusted not just to close deals, but to build the strategy around them.</p>
 </section>
+  
 <section class="testimonials" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
   <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">What Others Say</h2>
   <div class="testimonial-carousel">
@@ -80,11 +79,12 @@
     </div>
   </div>
 </section>
+  
   <section class="contact" id="contact" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
   <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">Let’s Talk About Building Together</h2>
   <p>I’m currently exploring my next role — whether that’s with a team scaling fast or an established organization looking to evolve its go-to-market strategy. If you’re looking for someone who’s built sales and partnership systems from scratch, led through growth and transition, and believes that execution and culture go hand in hand — let’s connect.</p>
   <p>Use the form below or email me directly. Let’s start a conversation.</p>
-  <form action="https://formspree.io/f/your-form-id" method="POST">
+  <form action="https://formspree.io/f/movelald" method="POST">
     <input type="text" name="name" placeholder="Your Name" required style="padding: 0.75rem; font-size: 1rem; width: 100%;" />
     <input type="email" name="email" placeholder="Your Email" required style="padding: 0.75rem; font-size: 1rem; width: 100%;" />
     <textarea name="message" placeholder="Your Message" required style="padding: 0.75rem; font-size: 1rem; width: 100%;"></textarea>
