--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <section class="contact" id="contact" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
   <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">Let’s Talk About Building Together</h2>
   <p>I’m currently exploring my next role — whether that’s with a team scaling fast or an established organization looking to evolve its go-to-market strategy. If you’re looking for someone who’s built sales and partnership systems from scratch, led through growth and transition, and believes that execution and culture go hand in hand — let’s connect.</p>
-  <p>Use the form below or email me directly. Let’s start a conversation.</p>
+  <p>Use the form below or email me directly @ <a href="mailto:Jeffcampbelljr@icloud.com">Jeffcampbelljr@icloud.com</a>. Let’s start a conversation.</p>
   <form action="https://formspree.io/f/movelald" method="POST">
     <input type="text" name="name" placeholder="Your Name" required style="padding: 0.75rem; font-size: 1rem; width: 100%;" />
     <input type="email" name="email" placeholder="Your Email" required style="padding: 0.75rem; font-size: 1rem; width: 100%;" />
