--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
   <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">The Spark</h2>
   <p>I was a Senior Account Executive at Capital One, working on the AmeriCommerce platform during its ownership. For three years, we operated with the backing of a full sales team and the structure of a Fortune 100 company.</p>
   <p>Then Capital One sold AmeriCommerce.</p>
-  <p>What remained was a lean but committed core: myself — the last AE — Ed Sturrock, our trusted CEO, Jack Cravy, our VP of Operations, a talented group of developers, and a small but mighty support team. We were scrappy, focused, and determined to rebuild.</p>
+  <p>What remained was a lean but committed core: myself, the last AE, Ed Sturrock, our trusted CEO, Jack Cravy, our VP of Operations, a talented group of developers, and a small but mighty support team. We were scrappy, focused, and determined to rebuild.</p>
   <p>There was no CRM. No sales pipeline. No playbook. So I built it. I rebuilt our Salesforce instance from scratch to automate workflows, assign leads, and create visibility across the team.</p>
-  <p>At the same time, I wasn’t just selling — I was forging partnerships with companies like <strong>PayPal, Affirm, ShipStation, and TaxCloud</strong>. I worked directly with their teams to strengthen integrations, negotiate terms, and build co-marketing motions that actually drove revenue.</p>
-  <p>That’s when I realized: the fastest way to grow wasn’t more calls or more emails — it was building the right relationships and systems to scale.</p>
+  <p>At the same time, I wasn’t just selling, I was forging partnerships with companies like <strong>PayPal, Affirm, ShipStation, and TaxCloud</strong>. I worked directly with their teams to strengthen integrations, negotiate terms, and build co-marketing motions that actually drove revenue.</p>
+  <p>That’s when I realized: the fastest way to grow wasn’t just more calls or more emails, it was building the right relationships and systems to scale.</p>
 </section>
 
  <section class="chapter dark" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
   <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">Revenue Through Relationships</h2>
-  <p>As Sales & Partnerships Manager at AmeriCommerce, I owned the entire go-to-market motion — leading inbound and outbound sales while simultaneously building a partner ecosystem that reinforced our revenue strategy.</p>
-  <p>I rebuilt our Salesforce instance from the ground up — introducing lead routing, pipeline visibility, and automated workflows that supported faster response times and higher conversion rates.</p>
-  <p>At the same time, I developed partnerships with companies like <strong>PayPal, Affirm, ShipStation, and TaxCloud</strong> — strengthening integrations, co-marketing, and monetized relationships. These partners not only increased product value — they also became a growing source of referral business.</p>
-  <p>This dual engine of <strong>sales and partnerships</strong> helped us grow a niche platform into a highly competitive offering — and contributed directly to year-over-year revenue gains.</p>
+  <p>As Sales & Partnerships Manager at AmeriCommerce, I owned the entire go-to-market motion, leading inbound and outbound sales while simultaneously building a partner ecosystem that reinforced our revenue strategy.</p>
+  <p>I rebuilt our Salesforce instance from the ground up, introducing lead routing, pipeline visibility, and automated workflows that supported faster response times and higher conversion rates.</p>
+  <p>At the same time, I developed partnerships with companies like <strong>PayPal, Affirm, ShipStation, and TaxCloud</strong>, strengthening integrations, co-marketing, and monetized relationships. These partners not only increased product value — they also became a growing source of referral business.</p>
+  <p>This dual engine of <strong>sales and partnerships</strong> helped us grow a niche platform into a highly competitive offering, and contributed directly to year-over-year revenue gains.</p>
 </section>
 
  <section class="chapter" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
   <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">Scaling at Cart.com</h2>
-  <p>When AmeriCommerce was acquired by Cart.com, I joined as one of its earliest team members — stepping in as <strong>Sales Manager for the Storefront division</strong> while the company was still under 50 employees.</p>
-  <p>Between 2021 and 2024, I was promoted twice — first to <strong>Senior Partner Manager</strong>, then to <strong>Director of Strategic Partnerships & Business Development</strong> — as Cart.com scaled to over 1,000 employees and raised significant funding.</p>
+  <p>When AmeriCommerce was acquired by Cart.com, I joined as one of its earliest team members, stepping in as <strong>Sales Manager for the Storefront division</strong> while the company was still under 50 employees.</p>
+  <p>Between 2021 and 2024, I was promoted twice, first to <strong>Senior Partner Manager</strong>, then to <strong>Director of Strategic Partnerships & Business Development</strong>, as Cart.com scaled to over 1,000 employees and raised significant funding.</p>
   <p>I helped build the partnerships function from scratch, collaborating with legal, sales, and marketing to create frameworks that were repeatable and revenue-focused. We signed and scaled partner relationships with <strong>PayPal, Klaviyo, Coinbase, Attentive, and Avalara</strong> — building co-sell, co-market, and enablement plays that helped fuel our rapid customer acquisition. These partnerships became a meaningful driver of our pipeline and brand credibility as we grew.</p>
-  <p>I was also one of the go-to leaders for onboarding and cross-team collaboration — helping train new hires, support exec alignment, and champion our core values as a founding member of the <strong>Culture Committee</strong>.</p>
-  <p>By the end of my time, I was leading all partnerships and sales efforts for the eCommerce division — trusted not just to close deals, but to build the strategy around them.</p>
+  <p>I was also one of the go-to leaders for onboarding and cross-team collaboration, helping train new hires, support exec alignment, and champion our core values as a founding member of the <strong>Culture Committee</strong>.</p>
+  <p>By the end of my time, I was leading all partnerships and sales efforts for the eCommerce division, trusted not just to close deals, but to build the strategy around them.</p>
 </section>
   
 <section class="testimonials" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
@@ -71,7 +71,7 @@
   </div>
   <div class="testimonial">
     <p>“Jeff is an informed consultant more than a salesman — a rare talent who listens, guides, and delivers. His insights and customer-first mindset make him an asset to any team.”</p>
-    <span>— Lance LaRue, President, 5 Under Golf (formerly Capital One)</span>
+    <span>— Lance LaRue, President, 5 Under Golf (formerly with Capital One)</span>
   </div>
   <div class="testimonial">
     <p>“Jeff is as hardworking as they come and extremely intelligent in his approach to both sales and partnerships. He dives into the details, communicates up effectively, and any company would be lucky to have him.”</p>
